# c-project-skeleton

./: .gitignore  .travis.yml  Guardfile  Makefile.am  README  README.md  config.h  config.status  configure.ac
doc/: Doxyfile.in
src/: Makefile.am  main.c  util.c  util.h
src/.deps/: luhn-main.Po  luhn-util.Po
src/lib/: Makefile.am  luhn.c  luhn.h
src/lib/.deps/: libluhn_a-luhn.Po
test/: Makefile.am  luhn_tests.c
test/.deps/: luhn_tests-luhn_tests.Po
test/frontend/: luhn.exp
